--- a/src/components/Nav/NavLinks/_NavLinks.scss
+++ b/src/components/Nav/NavLinks/_NavLinks.scss
@@ -13,3 +13,14 @@
 .active-nav-link {
   color: $theme-btn-secondary;
 }
+
+@media only screen and (max-width: 500px) {
+  .NavLinks {
+    font-size: 2.5rem;
+    text-align: center;
+
+    &:not(:nth-child(:last-child)) {
+      margin-right: 2rem;
+    }
+  }
+}
