--- a/src/components/pages/Home/Timeline/TimelineInfo/_TimelineInfo.scss
+++ b/src/components/pages/Home/Timeline/TimelineInfo/_TimelineInfo.scss
@@ -18,3 +18,23 @@
     }
   }
 }
+
+@media only screen and (max-width: 500px) {
+  .TimelineInfo {
+    .icon {
+      margin-right: 1rem;
+      font-size: 1.9rem;
+    }
+
+    .info {
+      h4 {
+        font-size: 2.3rem;
+      }
+
+      p {
+        margin-top: 0.4rem;
+        font-size: 1.6rem;
+      }
+    }
+  }
+}
