--- a/src/components/pages/Home/_Home.scss
+++ b/src/components/pages/Home/_Home.scss
@@ -20,3 +20,13 @@
     }
   }
 }
+
+@media only screen and (max-width: 500px) {
+  .Home {
+    .show-more {
+      p {
+        font-size: 2.2rem;
+      }
+    }
+  }
+}
