--- a/src/components/pages/MainPage/Headings/SubHeading/_SubHeading.scss
+++ b/src/components/pages/MainPage/Headings/SubHeading/_SubHeading.scss
@@ -11,3 +11,14 @@
     }
   }
 }
+
+@media only screen and (max-width: 500px) {
+  .SubHeading {
+    h2 {
+      font-size: 4rem;
+      text-align: center;
+      margin-bottom: 3rem;
+      color: $theme-btn-secondary;
+    }
+  }
+}
