--- a/src/components/pages/Portfolio/ProjectItem/_ProjectItem.scss
+++ b/src/components/pages/Portfolio/ProjectItem/_ProjectItem.scss
@@ -50,3 +50,31 @@
     }
   }
 }
+
+@media only screen and (max-width: 500px) {
+  .ProjectItem {
+    margin-bottom: 2rem;
+    padding: 1.5rem;
+
+    .project-content {
+      .project-title {
+        margin-bottom: 1rem;
+        font-size: 2.5rem;
+        font-weight: 500;
+        text-transform: capitalize;
+      }
+
+      .projects-desc {
+        font-size: 1.65rem;
+        line-height: 2rem;
+        margin-bottom: 1rem;
+        word-wrap: normal;
+      }
+
+      div {
+        flex-wrap: wrap;
+        margin-right: 0.6rem;
+      }
+    }
+  }
+}
