--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -244,6 +244,10 @@ body {
       .Footer div a:hover {
         color: #2666cf; }
 
+@media only screen and (max-width: 500px) {
+  .Footer div a {
+    font-size: 2rem; } }
+
 @media only screen and (min-width: 770px) {
   .Footer {
     padding: 1rem 20% 0 20%; } }
